syntax = "proto3";

package ai.metathings.service.deviced;

import "model.proto";

message ShowDeviceResponse {
	Device device = 1;
}
